## Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS         = -I m4

PYLINT                  = python3-pylint

AM_CPPFLAGS             = -I$(top_srcdir)/lib -I$(top_srcdir) \
                           @X_CFLAGS@ @osflags@
AM_CPPFLAGS             += -g -Wall -Wp,-D_FORTIFY_SOURCE=2
AM_LDFLAGS              =  -L../lib -llirc -llirc_client

BUILT_SOURCES           = config.py
CLEANFILES              = config.py

LIRC_LIBS               = ../lib/liblirc.la ../lib/liblirc_client.la

sbin_PROGRAMS           = lirc-lsplugins
bin_PROGRAMS            = ircat \
                          irexec \
                          irrecord \
                          irsend \
                          irsimreceive \
                          irsimsend \
                          irtestcase \
                          irw \
                          lirc-lsremotes \
                          mode2
if BUILD_XTOOLS
bin_PROGRAMS            += xmode2 irxevent
endif

if LINUX_KERNEL
bin_PROGRAMS            += irpipe
endif

if !DARWIN
bin_PROGRAMS            += irpty
endif

## Simple programs
irw_SOURCES             = irw.cpp
irpty_SOURCES           = irpty.cpp
irpty_LDADD             = @forkpty@ -lpthread $(LIRC_LIBS)
irexec_SOURCES          = irexec.cpp
irexec_LDADD            = @daemon@ $(LIRC_LIBS)
ircat_SOURCES           = ircat.cpp
ircat_LDADD             = $(LIRC_LIBS)
irpipe_SOURCES		= irpipe.cpp
irpipe_CPPFLAGS         = -I$(top_srcdir)/include \
                          -I$(top_srcdir)/drivers/irpipe $(AM_CPPFLAGS)
irrecord_SOURCES        = irrecord-ui.cpp
irrecord_LDADD          = $(LIRC_LIBS)  ../lib/libirrecord.la
irsimsend_SOURCES       = irsimsend.cpp
irsimsend_LDADD         = $(LIRC_LIBS)
irsimreceive_SOURCES    = irsimreceive.cpp
irsimreceive_LDADD      = $(LIRC_LIBS)
mode2_SOURCES           = mode2.cpp
mode2_LDADD             = $(LIRC_LIBS)
irtestcase_SOURCES      = irtestcase.cpp
irtestcase_LDADD        = $(LIRC_LIBS)
irsend_SOURCES          = irsend.cpp
irsend_LDADD            = $(LIRC_LIBS)
lirc_lsplugins_SOURCES  = lirc-lsplugins.cpp
lirc_lsplugins_LDADD    = $(LIRC_LIBS)
lirc_lsremotes_SOURCES  = lirc-lsremotes.cpp
lirc_lsremotes_LDADD    = $(LIRC_LIBS)


## X programs
irxevent_SOURCES        = irxevent.cpp
irxevent_LDADD          = @X_LIBS@ @X_PRE_LIBS@ -lX11 @X_EXTRA_LIBS@ \
                          $(LIRC_LIBS)
xmode2_SOURCES          = xmode2.cpp
xmode2_LDADD            = @X_LIBS@ @X_PRE_LIBS@ -lX11 @X_EXTRA_LIBS@ \
                          $(LIRC_LIBS)

dist_bin_SCRIPTS        = lirc-config-tool

if HAVE_DEVINPUT
dist_bin_SCRIPTS        += lirc-make-devinput
endif

dist_bin_SCRIPTS        += pronto2lirc irdb-get irtext2udp
dist_sbin_SCRIPTS       = lircd-setup
dist_noinst_SCRIPTS     = make_rel_symlink.py check_configs.py

pkgpython_PYTHON        = config.py \
                          lirc-setup/mvc_control.py \
                          lirc-setup/mvc_view.py \
                          lirc-setup/mvc_model.py \
                          lirc-setup/choosers.py \
                          lirc-setup/baseview.py \
                          lirc-setup/database.py \
                          lirc-setup/util.py
dist_pkgpython_SCRIPTS  = lirc-setup/lirc-setup
dist_pkgpython_DATA     = lirc-setup/lirc-setup.ui

pylint: irdb-get irtext2udp $(pkgpython_PYTHON)
	PYTHONPATH=./lirc-setup $(PYLINT) --rcfile=pylint.conf \
	--msg-template='{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}' \
	$?

pep8:   irdb-get $(pkgpython_PYTHON)
	python3-pep8 --config=pep8.conf $?


install-exec-hook:
	$(SED) -i -e 's/@version@/$(VERSION)/' \
	    $(DESTDIR)$(bindir)/lirc-config-tool \
	    $(DESTDIR)$(bindir)/irdb-get
	rm -f $(DESTDIR)/$(bindir)/lirc-setup
	$(PYTHON) $(srcdir)/make_rel_symlink.py \
	    $(DESTDIR)/$(pkgpythondir)/lirc-setup \
	    $(DESTDIR)/$(bindir)/lirc-setup
	cd $(DESTDIR)/$(bindir);  \
	    $(SED) -i '1s|python3[0-9\.]*|$(PYTHON)|' \
	        $(notdir $(dist_bin_SCRIPTS))
	cd $(DESTDIR)/$(sbindir);  \
	    $(SED) -i '1s|python3[0-9\.]*|$(PYTHON)|' \
	        $(notdir $(dist_sbin_SCRIPTS))

install-data-hook:
	rm -f $(DESTDIR)/$(pkgpythondir)/configs
	$(PYTHON) $(srcdir)/make_rel_symlink.py \
	    $(DESTDIR)$(pkgdatadir)/configs \
	    $(DESTDIR)$(pkgpythondir)/configs
	cd $(DESTDIR)/$(pkgpythondir);  \
	    $(SED) -ri '1s|python[0-9\.]*|$(PYTHON)|'  \
	        $(notdir $(dist_pkgpython_SCRIPTS))

uninstall-hook:
	rm -f $(DESTDIR)/$(bindir)/lirc-setup \
	      $(DESTDIR)/$(pkgpythondir)/configs

clean-local:
	-find . -name __pycache__ -exec rm -r {} \;

checkfiles:
	../git-tools/checkfiles $(SOURCES)

config.py: Makefile
	@echo '""" Generated by tools/Makefile.am."""' >config.py
	@echo 'DATADIR = "$(datadir)"' >>config.py
	@echo 'SYSCONFDIR = "$(sysconfdir)"' >>config.py
	@echo 'VARRUNDIR = "$(localstatedir)/run"' >>config.py
	@echo 'LOCALSTATEDIR = "$(localstatedir)"' >>config.py
	@echo 'BINDIR = "$(bindir)"' >>config.py
	@echo 'LIBDIR = "$(libdir)"' >>config.py
	@echo 'DOCDIR = "$(docdir)"' >>config.py
	@echo 'MODINFO = "$(MODINFO)"' >>config.py
	@echo 'VERSION = "$(VERSION)"' >>config.py
